- fixed: zoom in on multiple button clicks on mobile devices (especially for the calendar component) - fixed: calendar size does not change as much as before, for better usability. - improved responsiveness

--- a/src/style.css
+++ b/src/style.css
@@ -3,6 +3,8 @@
   line-height: 1.5;
   font-weight: 400;
 
+  touch-action: manipulation;
+
   scroll-behavior: smooth;
   overflow-x: hidden;
   overscroll-behavior: none;
